k8s/config/argocd/base/ingress/traefik.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.rafaelbroseghini.com`) && PathPrefix(`/argocd`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
    - kind: Rule
      match: Host(`argocd.rafaelbroseghini.com`) && PathPrefix(`/argocd`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: rafaelbroseghini-cert
